# gkrellm

./: .gitignore  CMakeLists.txt  COPYRIGHT  CREDITS  Changelog  Changelog-plugins.html  Changelog-themes.html  INSTALL  Makefile  README  Themes.html  common.mk  configure.h.cmake  gkrellm.1  gkrellm.spec  gkrellmd.1  resource.h  resource.rc
cmake/: gettext.cmake
cmake/modules/: FindGnuTLS-OpenSSL.cmake  FindIOKit.cmake  FindLibintl.cmake  FindNtlm.cmake  FindSensors.cmake
pixmaps/: bg_chart.xpm  bg_grid.xpm  bg_meter.xpm  bg_panel.xpm  bg_separator.xpm  button_meter_in.xpm  button_meter_out.xpm  button_panel_in.xpm  button_panel_out.xpm  data_in.xpm  data_in_grid.xpm  data_out.xpm  data_out_grid.xpm  decal_alarm.xpm  decal_button.xpm  decal_misc.xpm  decal_warn.xpm  frame_bottom.xpm  frame_left.xpm  frame_right.xpm  frame_top.xpm  gkrellmrc  gkrellmrc_1  gkrellmrc_2  gkrellmrc_3  gkrellmrc_4  gkrellmrc_5  krell_meter.xpm  krell_mini.xpm  krell_panel.xpm  krell_slider.xpm
pixmaps/cal/: bg_panel.xpm
pixmaps/clock/: bg_panel.xpm
pixmaps/cpu/: nice.xpm  nice_grid.xpm
pixmaps/fs/: bg_panel.xpm  bg_panel_1.xpm  bg_panel_2.xpm  spacer_bottom.xpm  spacer_top.xpm
pixmaps/gkrellmms/: bg_panel.xpm  bg_panel_1.xpm  bg_panel_2.xpm  bg_scroll.xpm  eject_button.xpm  krell.xpm  led_indicator.xpm  next_button.xpm  play_button.xpm  prev_button.xpm  spacer_bottom.xpm  spacer_top.xpm  stop_button.xpm
pixmaps/host/: bg_panel.xpm
pixmaps/mail/: decal_mail.xpm  krell_mail.xpm  krell_mail_daemon.xpm
pixmaps/mem/: bg_panel.xpm  krell.xpm  krell_buffers.xpm  krell_cache.xpm
pixmaps/net/: decal_net_leds.xpm
pixmaps/pmu/: bg_panel.xpm  bg_panel_1.xpm  bg_panel_2.xpm  spacer_bottom.xpm  spacer_top.xpm
pixmaps/sensors/: bg_panel.xpm  bg_panel_1.xpm  bg_panel_2.xpm  bg_volt.xpm
pixmaps/swap/: bg_panel.xpm  krell.xpm
pixmaps/timer/: bg_panel.xpm  bg_timer.xpm  decal_timer_button.xpm
pixmaps/timers/: bg_panel.xpm  bg_panel_1.xpm  bg_panel_2.xpm  spacer_bottom.xpm  spacer_top.xpm
pixmaps/uptime/: bg_panel.xpm
pixmaps/volume/: bg_panel.xpm  bg_panel_1.xpm  bg_panel_2.xpm  spacer_bottom.xpm  spacer_top.xpm
po/: CMakeLists.txt  Makefile  README  bg.po  cs.po  da.po  de.po  es.po  fr.po  gkrellm.pot  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sv.po  uk.po
server/: CMakeLists.txt  Makefile  client.c  client.h  configure  gkrellmd-private.h  gkrellmd-version.h  gkrellmd.conf  gkrellmd.h  gkrellmd.pc.cmake  glib.c  mail.c  main.c  monitor.c  plugins.c  serversocket.c  serversocket.h  sysdeps-unix.c  utils.c  win32-gui.c  win32-gui.h  win32-libgkrellmd.c  win32-manifest.xml  win32-plugin.c  win32-plugin.h  win32-resource.h  win32-resource.rc
shared/: CMakeLists.txt  log-private.h  log.c  log.h
src/: CMakeLists.txt  Makefile  alerts.c  base64.c  battery.c  chart.c  client.c  clock.c  config.c  configure  configure.h.cmake  cpu.c  deprecated.c  disk.c  fs.c  gkrellm-private.h  gkrellm-public-proto.h  gkrellm-sysdeps.h  gkrellm-version.h  gkrellm.h  gkrellm.pc.cmake  gui.c  hostname.c  icon.xpm  inet.c  inet.h  krell.c  mail.c  main.c  md5.h  md5c.c  md5global.h  mem.c  net.c  ntlm.h  panel.c  pixops.c  plugins.c  proc.c  sensors.c  (+17 more)
src/sysdeps/: bsd-common.c  bsd-net-open.c  darwin.c  dragonfly.c  freebsd.c  gtop.c  linux.c  netbsd.c  openbsd.c  sensors-common.c  solaris.c  win32-sensors.c  win32.c
